--- a/portoflio-project/firebase.json
+++ b/portoflio-project/firebase.json
@@ -1,17 +1,19 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "dist/portoflio-project",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "rewrites": [{
+      "source": "/public/**",
+      "destination": "/public.html"
+    },
+    {
+      "source": "**",
+      "destination": "/index.html"
+    }]
   },
   "database": {
     "rules": "database.rules.json"
